zeroidc/vendor/wasm-bindgen-macro/ui-tests/traits-not-implemented.stderr
error[E0277]: the trait bound `A: IntoWasmAbi` is not satisfied
  --> $DIR/traits-not-implemented.rs:5:1
   |
5  | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^ the trait `IntoWasmAbi` is not implemented for `A`
   |
note: required by a bound in `IntoWasmAbi`
  --> $DIR/traits.rs:9:1
   |
9  | / pub trait IntoWasmAbi: WasmDescribe {
10 | |     /// The wasm ABI type that this converts into when crossing the ABI
11 | |     /// boundary.
12 | |     type Abi: WasmAbi;
...  |
16 | |     fn into_abi(self) -> Self::Abi;
17 | | }
   | |_^ required by this bound in `IntoWasmAbi`
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
